# Breedr_interview_project

./: README.md  breedr_project.db  breedr_project.db-shm  breedr_project.db-wal  main.py  pyproject.toml
app/: db.py  main.py  models.py  schemas.py
app/api/routes/: cows.py  farmers.py  measurements.py
helpers/: global_restrictions.py
tests/: conftest.py
tests/app/api/routes/: test_cows.py  test_farmers.py  test_measurements.py
tests/manual_API_requests/: client_helpers.py  reset_db.py  run_requests.py
tests/manual_API_requests/end_to_end/: total_workflow_test.py
